# home_task001

./: CI.sh  README.md  docker-compose.yml  ezgif.com-gif-maker.gif:Zone.Identifier  instructions.md
backend/: .flake8  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/backend/: config.py  dal.py  main.py
backend/backend/dask/: dask_setup.py  remote_api_dask.py
backend/backend/db/: database.py  models.py
backend/backend/routers/: files_router.py  remote_api_router.py
backend/backend/schemas/: files_schemas.py  schemas.py
backend/migrations/versions/: 01ca2af0d8d2_init.py  37fb8ef44d07_init3.py  93dfbf328fcb_init2.py
backend/tests/: conftest.py  test_remote_api.py  test_upload.py
frontend/: .prettierrc  Dockerfile  entrypoint.sh  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: error-page.tsx  loading.tsx
frontend/src/css/: style.css
frontend/src/routes/: details.tsx  extend.tsx  list.tsx  upload.tsx
frontend/src/store/: store.ts  utils.ts
storage/2022_06_08/: talkwalker_small.csv
storage/2022_06_08/a5b700ac8b1c9a9882c15ed852d467ac/: part.0.parquet
storage/2022_06_09/: talkwalker_small.csv
storage/2022_06_10/: TA - apple - Processed Data.csv  users_posts_audience.csv
storage/2022_06_10/71ee527ae8f111ecac9b0242ac160005/: part.0.parquet
