[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Michal Lipinski <michal.lipinski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.113.0"}
databases = {extras = ["asyncpg"], version = "^0.5.5"}
celery = "^5.2.6"
typer = "^0.4.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pyright = "^1.1.248"
pytest = "7.1.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
skip-string-normalization = true
