[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Michal Lipinski <michal.lipinski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"
pandas = "^1.4.2"
dask = "^2022.5.2"
distributed = "^2022.5.2"
pydantic = "^1.9.1"
aiohttp = "^3.8.1"
requests = "^2.27.1"
debugpy = "^1.6.0"
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"
asyncpg = "^0.25.0"
aiofiles = "^0.8.0"
aiosqlite = "^0.17.0"
pytest-asyncio = "^0.18.3"
pyarrow = "^8.0.0"
randomname = "^0.1.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pyright = "^1.1.248"
pytest = "7.1.2"
requests = "^2.27.1"
sqlalchemy2-stubs = "^0.0.2-alpha.23"
httpx = "^0.23.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
skip-string-normalization = true
